  ref-triangle.mesh, ref-square.mesh, ref-tetrahedron.mesh, ref-cube.mesh, and
  ref-prism.mesh.

- Added a high-order extension of the shifted boundary method to solve PDEs on
  non body-fitted meshes. This is illustrated in the new Shifted Diffusion
  miniapp, see miniapps/shifted/diffusion.cpp.

- Added makefile rule to generate TAGS table for vi or Emacs users.

API changes
-----------
- Added an abstract interface `mfem::FaceRestriction` for `H1FaceRestriction`
  and `L2FaceRestriction`.
  In order to conform with the semantic of `MultTranspose` in `mfem::Operator`,
  `mfem::FaceRestriction::MultTranspose` now sets instead of adding values, and
  `mfem::FaceRestriction::AddMultTranspose` should replace previous calls to
  `mfem::FaceRestriction::MultTranspose`.

libCEED integration improvements
--------------------------------
- Refactor the libCEED integration

- Add support for VectorCoefficient with libCEED backends.

- Add support for ConvectionIntegrator, and VectorConvectionNLFIntegrator with
  libCEED backends.


Version 4.2, released on October 30, 2020
=========================================

High-Performance Computing
--------------------------
- Added support for explicit vectorization in the high-performance templated
  code, which can now take advantage of specific classes on the following
  architectures:
  * x86 (SSE/AVX/AVX2/AVX512),
  * Power8 & Power9 (VSX),
  * BG/Q (QPX).
  These are disabled by default, but can be enabled with MFEM_USE_SIMD=YES.
  See the new file linalg/simd.hpp and the new directory linalg/simd.

- Added an Element Assembly mode compatible with GPU device execution for H1 and
  L2 spaces in the mass, convection, diffusion, transpose, and the face DG trace
  integrators. See option '-ea' in Example 9. When enabled, this assembly level
  stores independent dense matrices for the elements, and independent dense
  matrices for the faces in the DG case.
