@@ -1,4 +1,4 @@
-# Copyright (c) 2010-2020, Lawrence Livermore National Security, LLC. Produced
+# Copyright (c) 2010-2021, Lawrence Livermore National Security, LLC. Produced
 # at the Lawrence Livermore National Laboratory. All Rights reserved. See files
 # LICENSE and NOTICE for details. LLNL-CODE-806117.
 #
@@ -11,12 +11,18 @@
 
 if (MFEM_USE_PARELAG AND MFEM_USE_MPI)
 
-  configure_file(${PROJECT_SOURCE_DIR}/miniapps/parelag/MultilevelHcurlSolver_example_parameters.xml
-                 ${PROJECT_BINARY_DIR}/miniapps/parelag/MultilevelHcurlSolver_example_parameters.xml
+  configure_file(${PROJECT_SOURCE_DIR}/miniapps/parelag/MultilevelHcurlSolver_cube_example_parameters.xml
+                 ${PROJECT_BINARY_DIR}/miniapps/parelag/MultilevelHcurlSolver_cube_example_parameters.xml
+                 COPYONLY)
+  configure_file(${PROJECT_SOURCE_DIR}/miniapps/parelag/MultilevelHcurlSolver_pipe_example_parameters.xml
+                 ${PROJECT_BINARY_DIR}/miniapps/parelag/MultilevelHcurlSolver_pipe_example_parameters.xml
                  COPYONLY)
 
-  configure_file(${PROJECT_SOURCE_DIR}/miniapps/parelag/MultilevelHdivSolver_example_parameters.xml
-                 ${PROJECT_BINARY_DIR}/miniapps/parelag/MultilevelHdivSolver_example_parameters.xml
+  configure_file(${PROJECT_SOURCE_DIR}/miniapps/parelag/MultilevelHdivSolver_cube_example_parameters.xml
+                 ${PROJECT_BINARY_DIR}/miniapps/parelag/MultilevelHdivSolver_cube_example_parameters.xml
+                 COPYONLY)
+  configure_file(${PROJECT_SOURCE_DIR}/miniapps/parelag/MultilevelHdivSolver_pipe_example_parameters.xml
+                 ${PROJECT_BINARY_DIR}/miniapps/parelag/MultilevelHdivSolver_pipe_example_parameters.xml
                  COPYONLY)
 
   add_mfem_miniapp(MultilevelHcurlSolver
